<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="131dp"
        android:autofillHints="@string/input_hint"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:gravity="center"
        android:hint="@string/input_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="200dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingStart="40dp"
        android:text="@string/tons"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/res_tons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingStart="40dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="389dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingStart="40dp"
        android:text="@string/kilograms"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="495dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingStart="40dp"
        android:text="@string/grams"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/res_grams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="529dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingStart="40dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/res_kilograms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="-5dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingStart="40dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>